# gh-agent-master

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-10-agent-equip-v1.md
docs/superpowers/specs/: 2026-06-10-agent-equip-design.md
src/agent_equip/: cli.py  manifest.py  registry.py
src/agent_equip/agents/: base.py  claude_code.py  cursor.py  generic.py  windsurf.py
src/agent_equip/channels/: base.py  github.py
src/agent_equip/skills/github/: SKILL.md
tests/: test_agents.py  test_channels.py  test_cli.py  test_manifest.py  test_registry.py
