[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-equip"
version = "0.1.0"
description = "Set up GitHub superpowers for any AI coding agent in one command."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "shenmali" }]
dependencies = ["typer>=0.12"]

[project.urls]
Homepage = "https://github.com/shenmali/agent-equip"

[project.scripts]
agent-equip = "agent_equip.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_equip"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
